--- a/_posts/2026-02-20-nietzche-bge-260.md
+++ b/_posts/2026-02-20-nietzche-bge-260.md
@@ -4,6 +4,7 @@ title: "Beyond Good and Evil §260"
 categories: [philosophy]
 tags: [philosophy, nietzche, bge]
 ---
+## Aphorism 260
 
 Nietzche, surveying our miriad conceptions of morality throughout history, distinguishes 'two basic types': master morality and slave morality.
 
